emulation: Use cipd instead of system deps
This change switches over the build to use cipd instead of system deps
as well as modifying the binary selection system to use toolchains.

--- a/.bazelrc
+++ b/.bazelrc
@@ -7,3 +7,6 @@ common:bzlmod --registry=https://raw.githubusercontent.com/bazelembedded/bazel-c
 # Test passthrough execution wrapper
 common:passthrough_wrapper --run_under=//emulation:passthrough
 build --incompatible_strict_action_env
+
+# Adds a wrapper to each execution.
+test --run_under=//:wrapper
