--- a/docs/BUILD.bazel
+++ b/docs/BUILD.bazel
@@ -2,7 +2,7 @@ load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
 bzl_library(
-    name = "rules_emulation",
+    name = "rules_emulation_bzl",
     srcs = [
         "//emulation:bazel",
     ],
@@ -12,5 +12,5 @@ stardoc(
     name = "rules_emulation_docs",
     out = "emulation_docs.md",
     input = "//emulation:defs.bzl",
-    deps = [":rules_emulation"],
+    deps = [":rules_emulation_bzl"],
 )
