Pending changes exported from your codespace

--- a/docs/BUILD.bazel
+++ b/docs/BUILD.bazel
@@ -14,3 +14,8 @@ stardoc(
     input = "//emulation:defs.bzl",
     deps = [":rules_emulation"],
 )
+
+filegroup(
+    name = "distribution",
+    srcs = glob(["*"]),
+)
